--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,119 +115,119 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_utils\n",
+    "    cli_display --> cli_search\n",
+    "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_search\n",
-    "    cli_display --> cli_test_code\n",
-    "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_helper_discovery\n",
+    "    cli_display --> cli_test_code\n",
     "    cli_display --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
     "    cli_dynamic_examples --> cli_display\n",
+    "    cli_dynamic_examples --> cli_utils\n",
+    "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_cli_config\n",
-    "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_search\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
-    "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
     "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_imports\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_cli_config\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_utils\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_factory_extraction --> core_base\n",
     "    cli_factory_extraction --> cli_utils\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
     "    cli_imports --> cli_utils\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_borders\n",
     "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_sizing\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> core_base\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_accessibility\n",
     "    utilities_accessibility --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
-    "    utilities_borders --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
-    "    utilities_effects --> core_testing\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_testing\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_colors\n",
-    "    utilities_filters --> builders_scales\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
+    "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> core_testing\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_testing\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
     "    utilities_spacing --> core_testing\n",
+    "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> core_testing\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_base\n",
-    "    utilities_tables --> builders_scales\n",
     "    utilities_tables --> core_testing\n",
+    "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_testing\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_base\n",
-    "    utilities_typography --> builders_scales\n",
-    "    utilities_typography --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> builders_scales\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -2712,159 +2712,167 @@
     "\n",
     "```python\n",
     "def add_modules_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'modules' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'modules' command\n",
     "    \"Add the 'modules' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_factories_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'factories' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'factories' command\n",
     "    \"Add the 'factories' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_factory_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'factory' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'factory' command\n",
     "    \"Add the 'factory' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_examples_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'examples' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'examples' command\n",
     "    \"Add the 'examples' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_example_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'example' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'example' command\n",
     "    \"Add the 'example' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_helpers_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'helpers' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'helpers' command\n",
     "    \"Add the 'helpers' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_helper_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'helper' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'helper' command\n",
     "    \"Add the 'helper' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_search_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'search' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'search' command\n",
     "    \"Add the 'search' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_test_code_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'test-code' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'test-code' command\n",
     "    \"Add the 'test-code' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_core_utils_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'core-utils' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'core-utils' command\n",
     "    \"Add the 'core-utils' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_core_util_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'core-util' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'core-util' command\n",
     "    \"Add the 'core-util' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_imports_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'imports' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'imports' command\n",
     "    \"Add the 'imports' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def add_scan_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'scan' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'scan' command\n",
     "    \"Add the 'scan' command parser.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def dispatch_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments\n",
+    "): # Dispatches to the appropriate command handler\n",
     "    \"Dispatch the parsed arguments to the appropriate handler.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def handle_search_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments for the search command\n",
+    "): # Executes the search command with the provided arguments\n",
     "    \"Handle the search command.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def handle_test_code_command(\n",
-    "    args,  # TODO: Add type hint and description\n",
+    "    args:argparse.Namespace, # Parsed command-line arguments for the test-code command\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    "): # Executes the test-code command with the provided arguments\n",
     "    \"Handle the test-code command.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def handle_scan_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments for the scan command\n",
+    "): # Executes the scan command with the provided arguments\n",
     "    \"Handle the scan command.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def create_help_description(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ")\n",
+    ") -> str: # Comprehensive description string for the CLI tool's help message\n",
     "    \"Create a comprehensive description for the CLI tool's help message\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def create_example_usage_flow(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ")\n",
+    ") -> str: # Formatted example usage flow string with aligned comments\n",
     "    \"Create an example usage flow\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def create_help_epilogue(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    ")\n",
+    ") -> str: # Comprehensive epilogue string for the CLI tool's help message\n",
     "    \"Create a comprehensive epilogue for the CLI tool's help message\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def setup_argument_parser(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Configured argument parser with all subcommands\n",
     "    \"Set up the main argument parser with all subcommands.\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def main(\n",
-    "): # TODO: Add type hint\n",
+    "def main() -> None: # Executes the CLI with parsed arguments\n",
+    "    \"\"\"CLI entry point for exploring cjm-fasthtml-tailwind utilities.\"\"\"\n",
+    "    # Set up the argument parser\n",
+    "    parser = setup_argument_parser()\n",
+    "    \n",
+    "    # Parse arguments\n",
+    "    args = parser.parse_args()\n",
+    "    \n",
+    "    # If no command specified, show help\n",
+    "    if args.command is None\n",
     "    \"CLI entry point for exploring cjm-fasthtml-tailwind utilities.\"\n",
     "```\n"
    ]
