--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import argparse\n",
     "from typing import Optional\n",
     "from cjm_fasthtml_tailwind.cli.utils import load_code_from_file\n",
     "from cjm_fasthtml_tailwind.cli.search import search_all\n",
@@ -98,8 +99,8 @@
    "source": [
     "#| export\n",
     "def add_modules_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'modules' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'modules' command\n",
     "    \"\"\"Add the 'modules' command parser.\"\"\"\n",
     "    return subparsers.add_parser('modules', help='List all utility modules')"
    ]
@@ -113,9 +114,9 @@
    "source": [
     "#| export\n",
     "def add_factories_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'factories' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'factories' command\n",
     "    \"\"\"Add the 'factories' command parser.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -153,8 +154,8 @@
    "source": [
     "#| export\n",
     "def add_factory_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'factory' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'factory' command\n",
     "    \"\"\"Add the 'factory' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('factory', help='Show detailed info for a specific factory')\n",
     "    \n",
@@ -184,8 +185,8 @@
    "source": [
     "#| export\n",
     "def add_examples_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'examples' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'examples' command\n",
     "    \"\"\"Add the 'examples' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('examples', help='Show usage examples')\n",
     "    parser.add_argument(\n",
@@ -205,8 +206,8 @@
    "source": [
     "#| export\n",
     "def add_example_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'example' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'example' command\n",
     "    \"\"\"Add the 'example' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('example', help='Show source code for a specific example')\n",
     "    \n",
@@ -236,8 +237,8 @@
    "source": [
     "#| export\n",
     "def add_helpers_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'helpers' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'helpers' command\n",
     "    \"\"\"Add the 'helpers' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('helpers', help='Show helper functions')\n",
     "    parser.add_argument(\n",
@@ -257,8 +258,8 @@
    "source": [
     "#| export\n",
     "def add_helper_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'helper' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'helper' command\n",
     "    \"\"\"Add the 'helper' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('helper', help='Show source code for a specific helper')\n",
     "    \n",
@@ -288,8 +289,8 @@
    "source": [
     "#| export\n",
     "def add_search_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'search' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'search' command\n",
     "    \"\"\"Add the 'search' command parser.\"\"\"\n",
     "    # Get dynamic examples\n",
     "    example_factories = get_example_factories(limit=2)\n",
@@ -365,9 +366,9 @@
    "source": [
     "#| export\n",
     "def add_test_code_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'test-code' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'test-code' command\n",
     "    \"\"\"Add the 'test-code' command parser.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -466,8 +467,8 @@
    "source": [
     "#| export\n",
     "def add_core_utils_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'core-utils' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'core-utils' command\n",
     "    \"\"\"Add the 'core-utils' command parser.\"\"\"\n",
     "    return subparsers.add_parser('core-utils', help='List core utility functions')"
    ]
@@ -481,8 +482,8 @@
    "source": [
     "#| export\n",
     "def add_core_util_parser(\n",
-    "    subparsers  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    subparsers:argparse._SubParsersAction # Subparsers object to add the 'core-util' command to\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'core-util' command\n",
     "    \"\"\"Add the 'core-util' command parser.\"\"\"\n",
     "    parser = subparsers.add_parser('core-util', help='Show source code for a core utility')\n",
     "    \n",
@@ -506,9 +507,9 @@
    "source": [
     "#| export\n",
     "def add_imports_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'imports' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'imports' command\n",
     "    \"\"\"Add the 'imports' command parser.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -563,9 +564,9 @@
    "source": [
     "#| export\n",
     "def add_scan_parser(\n",
-    "    subparsers,  # TODO: Add type hint and description\n",
+    "    subparsers:argparse._SubParsersAction, # Subparsers object to add the 'scan' command to\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Argument parser for the 'scan' command\n",
     "    \"\"\"Add the 'scan' command parser.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -649,8 +650,8 @@
    "source": [
     "#| export\n",
     "def dispatch_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments\n",
+    "): # Dispatches to the appropriate command handler\n",
     "    \"\"\"Dispatch the parsed arguments to the appropriate handler.\"\"\"\n",
     "    if args.command == 'modules':\n",
     "        display_modules()\n",
@@ -710,8 +711,8 @@
    "source": [
     "#| export\n",
     "def handle_search_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments for the search command\n",
+    "): # Executes the search command with the provided arguments\n",
     "    \"\"\"Handle the search command.\"\"\"\n",
     "    # Determine which content types to search\n",
     "    if args.search_in == 'all':\n",
@@ -740,9 +741,9 @@
    "source": [
     "#| export\n",
     "def handle_test_code_command(\n",
-    "    args,  # TODO: Add type hint and description\n",
+    "    args:argparse.Namespace, # Parsed command-line arguments for the test-code command\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    "): # Executes the test-code command with the provided arguments\n",
     "    \"\"\"Handle the test-code command.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -793,8 +794,8 @@
    "source": [
     "#| export\n",
     "def handle_scan_command(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # TODO: Add type hint\n",
+    "    args:argparse.Namespace # Parsed command-line arguments for the scan command\n",
+    "): # Executes the scan command with the provided arguments\n",
     "    \"\"\"Handle the scan command.\"\"\"\n",
     "    # Determine input type\n",
     "    input_type = None\n",
@@ -827,7 +828,7 @@
     "#| export\n",
     "def create_help_description(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "):\n",
+    ") -> str: # Comprehensive description string for the CLI tool's help message\n",
     "    \"\"\"Create a comprehensive description for the CLI tool's help message\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -868,7 +869,7 @@
     "#| export\n",
     "def create_example_usage_flow(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "):\n",
+    ") -> str: # Formatted example usage flow string with aligned comments\n",
     "    \"\"\"Create an example usage flow\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -911,7 +912,7 @@
     "#| export\n",
     "def create_help_epilogue(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "):\n",
+    ") -> str: # Comprehensive epilogue string for the CLI tool's help message\n",
     "    \"\"\"Create a comprehensive epilogue for the CLI tool's help message\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -982,7 +983,7 @@
     "#| export\n",
     "def setup_argument_parser(\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration to use\n",
-    "): # TODO: Add type hint\n",
+    ") -> argparse.ArgumentParser: # Configured argument parser with all subcommands\n",
     "    \"\"\"Set up the main argument parser with all subcommands.\"\"\"\n",
     "    if config is None:\n",
     "        config = get_active_config()\n",
@@ -1038,8 +1039,7 @@
     "#| export\n",
     "import argparse\n",
     "\n",
-    "def main(\n",
-    "): # TODO: Add type hint\n",
+    "def main() -> None: # Executes the CLI with parsed arguments\n",
     "    \"\"\"CLI entry point for exploring cjm-fasthtml-tailwind utilities.\"\"\"\n",
     "    # Set up the argument parser\n",
     "    parser = setup_argument_parser()\n",
