--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,119 +115,119 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_search\n",
     "    cli_display --> cli_factory_extraction\n",
-    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_cli_config\n",
+    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_helper_discovery\n",
     "    cli_display --> cli_test_code\n",
+    "    cli_display --> cli_core_utils_discovery\n",
     "    cli_display --> cli_imports\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_display\n",
+    "    cli_display --> cli_search\n",
     "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_factory_extraction\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_cli_config\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
     "    cli_dynamic_examples --> cli_helper_discovery\n",
     "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
     "    cli_dynamic_examples --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_search\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_dynamic_examples\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_helper_discovery --> cli_utils\n",
-    "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_cli_config\n",
+    "    cli_helper_discovery --> cli_example_discovery\n",
     "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_factory_extraction\n",
+    "    cli_imports --> cli_helper_discovery\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
-    "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_utils\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_layout\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_transitions_and_animation\n",
-    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> core_base\n",
     "    core_testing --> utilities_accessibility\n",
-    "    utilities_accessibility --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
-    "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_testing\n",
+    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_colors\n",
+    "    utilities_backgrounds --> builders_colors\n",
     "    utilities_borders --> core_testing\n",
+    "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_colors\n",
+    "    utilities_borders --> builders_colors\n",
     "    utilities_effects --> core_testing\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> core_base\n",
-    "    utilities_filters --> builders_colors\n",
+    "    utilities_effects --> builders_colors\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_flexbox_and_grid --> core_testing\n",
+    "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
-    "    utilities_interactivity --> builders_colors\n",
     "    utilities_interactivity --> core_testing\n",
+    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
+    "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_testing\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> core_testing\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_testing\n",
+    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_base\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_testing\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> core_testing\n",
+    "    utilities_transforms --> core_base\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_typography --> core_base\n",
-    "    utilities_typography --> builders_colors\n",
     "    utilities_typography --> core_testing\n",
+    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -1361,7 +1361,7 @@
     "    \n",
     "    def describe(\n",
     "            self\n",
-    "        ) -> str:  # TODO: Add return description\n",
+    "        ) -> str: # The documentation string for this directional border factory\n",
     "        \"Return the documentation for this factory.\"\n",
     "```\n",
     "\n",
@@ -3072,7 +3072,7 @@
     "    \n",
     "    def format(\n",
     "            self\n",
-    "        ) -> str:  # TODO: Add return description\n",
+    "        ) -> str: # The name of this blur scale for use in Tailwind classes\n",
     "        \"Format as Tailwind class suffix.\"\n",
     "```\n",
     "\n",
@@ -3087,7 +3087,7 @@
     "    \n",
     "    def format(\n",
     "            self\n",
-    "        ) -> str:  # TODO: Add return description\n",
+    "        ) -> str: # The name of this drop shadow scale for use in Tailwind classes\n",
     "        \"Format as Tailwind class suffix.\"\n",
     "```\n",
     "\n",
@@ -5721,9 +5721,9 @@
     "\n",
     "```python\n",
     "def create_test_script(\n",
-    "    code: str,  # TODO: Add description\n",
+    "    code: str, # The Python code snippet to wrap in a test script\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str: # A complete Python script with imports and the provided code\n",
     "    \"Create a test script with necessary imports and the provided code.\"\n",
     "```\n",
     "\n",
@@ -5916,28 +5916,28 @@
     "\n",
     "```python\n",
     "def center_transform(\n",
-    ") -> str:  # TODO: Add return description\n",
+    ") -> str: # Classes to center an element using translate transformations\n",
     "    \"Center an element using transform translate.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def hover_scale(\n",
-    "    scale: int = 110  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "    scale: int = 110 # The scale percentage to apply on hover (e.g., 110 for 110%)\n",
+    ") -> str: # Classes to create a hover scale effect with transitions\n",
     "    \"Create a hover scale effect.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def flip_card_3d(\n",
-    "    perspective_value: str = \"normal\"  # TODO: Add description\n",
-    ") -> Dict[str, str]:  # TODO: Add return description\n",
+    "    perspective_value: str = \"normal\" # The perspective value for the 3D effect (e.g., 'normal', 'dramatic', 'distant')\n",
+    ") -> Dict[str, str]: # Dictionary with class strings for container, inner, front, and back elements\n",
     "    \"Get classes for a 3D flip card effect.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def parallax_transform(\n",
-    "    speed: float = 0.5  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "    speed: float = 0.5 # The parallax scroll speed multiplier (e.g., 0.5 for half speed)\n",
+    ") -> str: # Classes to create a parallax transform effect based on scroll position\n",
     "    \"Create a parallax transform effect.\"\n",
     "```\n",
     "\n",
@@ -6657,17 +6657,17 @@
     "\n",
     "```python\n",
     "class FontFamily(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"Font family options for controlling typography.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "class FontWeight(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"Font weight options from thin to black.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "class FontStretch(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"Font stretch options for controlling font width.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -6710,22 +6710,22 @@
     "\n",
     "```python\n",
     "class ListStylePosition(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"List marker position options.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "class ListStyleType(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"List marker type options.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "class TextAlign(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"Text alignment options.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "class DecorationStyle(str, Enum):\n",
-    "    \"TODO: Add class description\"\n",
+    "    \"Text decoration style options.\"\n",
     "```\n",
     "\n",
     "```python\n",
