--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,119 +115,119 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_utils\n",
-    "    cli_display --> cli_factory_extraction\n",
     "    cli_display --> cli_pattern_scanner\n",
+    "    cli_display --> cli_utils\n",
     "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_helper_discovery\n",
-    "    cli_display --> cli_test_code\n",
     "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_factory_extraction\n",
+    "    cli_display --> cli_example_discovery\n",
     "    cli_display --> cli_imports\n",
     "    cli_display --> cli_search\n",
-    "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_display\n",
-    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_display --> cli_test_code\n",
+    "    cli_display --> cli_helper_discovery\n",
     "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_dynamic_examples --> cli_utils\n",
     "    cli_dynamic_examples --> cli_cli_config\n",
-    "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_display\n",
     "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_example_discovery\n",
     "    cli_dynamic_examples --> cli_imports\n",
     "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_test_code\n",
+    "    cli_dynamic_examples --> cli_helper_discovery\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_dynamic_examples\n",
     "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_cli_config\n",
+    "    cli_explorer --> cli_dynamic_examples\n",
+    "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_test_code\n",
     "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_test_code\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_cli_config\n",
-    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_helper_discovery\n",
-    "    cli_pattern_scanner --> cli_example_discovery\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
+    "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
     "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_utils\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_test_code --> cli_cli_config\n",
-    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_borders\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> utilities_accessibility\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> core_resources\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_testing\n",
     "    utilities_backgrounds --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_testing\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_testing\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> core_testing\n",
+    "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
-    "    utilities_filters --> builders_colors\n",
-    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_interactivity --> core_testing\n",
-    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_base\n",
     "    utilities_interactivity --> builders_colors\n",
-    "    utilities_layout --> core_testing\n",
     "    utilities_layout --> core_base\n",
+    "    utilities_layout --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_testing\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> builders_scales\n",
     "    utilities_svg --> core_testing\n",
     "    utilities_svg --> core_base\n",
-    "    utilities_svg --> builders_scales\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_testing\n",
-    "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> core_testing\n",
+    "    utilities_tables --> core_base\n",
     "    utilities_transforms --> core_base\n",
+    "    utilities_transforms --> core_testing\n",
     "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_testing\n",
-    "    utilities_typography --> core_base\n",
     "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
+    "    utilities_typography --> core_base\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -6875,28 +6875,28 @@
     "\n",
     "```python\n",
     "def print_header(\n",
-    "    title: str,  # TODO: Add description\n",
-    "    width: int = 60  # TODO: Add description\n",
-    "): # TODO: Add type hint\n",
+    "    title: str,  # Header title to display\n",
+    "    width: int = 60  # Width of separator line in characters\n",
+    ") -> None:  # No return value\n",
     "    \"Print a formatted header with title and separator.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def print_not_found(\n",
-    "    item_type: str,  # TODO: Add description\n",
-    "    item_name: str,  # TODO: Add description\n",
-    "    module_name: Optional[str] = None,  # TODO: Add description\n",
+    "    item_type: str,  # Type of item that wasn't found (e.g., 'factory', 'example')\n",
+    "    item_name: str,  # Name of the item that wasn't found\n",
+    "    module_name: Optional[str] = None,  # Optional module name where search was performed\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
-    "): # TODO: Add type hint\n",
+    ") -> None:  # No return value\n",
     "    \"Print a standardized not found message.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def print_total(\n",
-    "    item_type: str,  # TODO: Add description\n",
-    "    count: int,  # TODO: Add description\n",
-    "    across_modules: bool = False  # TODO: Add description\n",
-    "): # TODO: Add type hint\n",
+    "    item_type: str,  # Type of items being counted (e.g., 'factories', 'examples')\n",
+    "    count: int,  # Number of items found\n",
+    "    across_modules: bool = False  # Whether count spans multiple modules\n",
+    ") -> None:  # No return value\n",
     "    \"Print a standardized total count message.\"\n",
     "```\n",
     "\n",
@@ -6941,31 +6941,31 @@
     "\n",
     "```python\n",
     "def extract_match_context(\n",
-    "    text: str,   # TODO: Add description\n",
-    "    query: str,   # TODO: Add description\n",
-    "    case_sensitive: bool = False,   # TODO: Add description\n",
-    "    context_size: int = 30  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "    text: str,  # Text to extract context from\n",
+    "    query: str,  # Query string to find\n",
+    "    case_sensitive: bool = False,  # Whether to perform case-sensitive search\n",
+    "    context_size: int = 30  # Number of characters to show before and after match\n",
+    ") -> str:  # Context string with match highlighted\n",
     "    \"Extract context around a match in text.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def extract_source_line_context(\n",
-    "    source: str,   # TODO: Add description\n",
-    "    query: str,   # TODO: Add description\n",
-    "    case_sensitive: bool = False  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "    source: str,  # Source code to search\n",
+    "    query: str,  # Query string to find\n",
+    "    case_sensitive: bool = False  # Whether to perform case-sensitive search\n",
+    ") -> str:  # Line context showing where match was found\n",
     "    \"Extract line context for a match in source code.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def create_search_result(\n",
-    "    content_type: str,  # TODO: Add description\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    item_name: str,  # TODO: Add description\n",
-    "    match_context: str,  # TODO: Add description\n",
-    "    match_location: str  # TODO: Add description\n",
-    ") -> SearchResult:  # TODO: Add return description\n",
+    "    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n",
+    "    module_name: str,  # Module where match was found\n",
+    "    item_name: str,  # Name of the item that matched\n",
+    "    match_context: str,  # Context showing the match\n",
+    "    match_location: str  # Where in the item the match was found ('name', 'doc', 'source')\n",
+    ") -> SearchResult:  # SearchResult instance with provided fields\n",
     "    \"Create a SearchResult with standard fields.\"\n",
     "```\n",
     "\n",
@@ -6980,21 +6980,21 @@
     "\n",
     "```python\n",
     "def search_in_name_and_text(\n",
-    "    query: str,  # TODO: Add description\n",
-    "    item_name: str,  # TODO: Add description\n",
-    "    text: str,  # TODO: Add description\n",
-    "    content_type: str,  # TODO: Add description\n",
-    "    module_name: str,  # TODO: Add description\n",
-    "    text_location: str,  # TODO: Add description\n",
-    "    case_sensitive: bool = False  # TODO: Add description\n",
-    ") -> List[SearchResult]:  # TODO: Add return description\n",
+    "    query: str,  # Search query to find\n",
+    "    item_name: str,  # Item name to search in\n",
+    "    text: str,  # Text (documentation, docstring) to search in\n",
+    "    content_type: str,  # Type of content being searched\n",
+    "    module_name: str,  # Module containing the item\n",
+    "    text_location: str,  # Description of text field (e.g., 'documentation', 'docstring')\n",
+    "    case_sensitive: bool = False  # Whether to perform case-sensitive search\n",
+    ") -> List[SearchResult]:  # List of search results for matches found\n",
     "    \"Search in both name and text fields, returning search results.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def check_factory_usage_patterns(\n",
-    "    factory_name: str  # TODO: Add description\n",
-    ") -> List[str]:  # TODO: Add return description\n",
+    "    factory_name: str  # Name of factory to create patterns for\n",
+    ") -> List[str]:  # List of regex patterns matching factory usage\n",
     "    \"Get regex patterns to match common factory usage patterns.\"\n",
     "```\n",
     "\n",
@@ -7025,10 +7025,10 @@
     "\n",
     "```python\n",
     "def find_variable_usages(\n",
-    "    func_src: str,  # TODO: Add description\n",
-    "    var_name: str  # TODO: Add description\n",
-    "): # TODO: Add type hint\n",
-    "    \"Find variable usages by parsing function into an AST\"\n",
+    "    func_src: str,  # Source code to search\n",
+    "    var_name: str  # Variable name to find\n",
+    ") -> List[Tuple[int, int, str]]:  # List of (line_number, column, context_type) tuples\n",
+    "    \"Find variable usages by parsing function into an AST.\"\n",
     "```\n",
     "\n",
     "```python\n",
@@ -7071,7 +7071,7 @@
     "\n",
     "```python\n",
     "def iterate_all_modules_with_items(\n",
-    "    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n",
+    "    extractor_func: Callable[[Any, str], List[Any]],  # Function to extract items from a module\n",
     "    module_filter: Optional[str] = None,  # Optional specific module to filter for\n",
     "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
     ") -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n",
@@ -7087,8 +7087,8 @@
     "\n",
     "```python\n",
     "def load_code_from_file(\n",
-    "    filepath: str  # TODO: Add description\n",
-    ") -> Optional[str]:  # TODO: Add return description\n",
+    "    filepath: str  # Path to file to load\n",
+    ") -> Optional[str]:  # File contents as string, or None if error\n",
     "    \"Load code from a file.\"\n",
     "```\n",
     "\n",
